--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background: #0f2027;
+  background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
+  color: #ffffff;
 }
 
 h1 {
