--- a/src/index.css
+++ b/src/index.css
@@ -24,25 +24,17 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: #0f2027;
-  background-image: url('https://www.transparenttextures.com/patterns/cubes.png');
-  color: #ffffff;
+  background: #fff;
+  font-size: 12px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 0.6rem 1.2rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
